--- a/style.css
+++ b/style.css
@@ -1,6 +1,10 @@
-img {
+#om img {
     border-radius: 100%;
     width: 50%;
+}
+
+.bauhaus img {
+    width: 30%;
 }
 
 p,
@@ -60,7 +64,7 @@ p {
 
 /**----------- Ommig ---------------**/
 
-#om {
+#om .bauhaus {
     box-sizing: border-box;
     background-color: rgba(255, 226, 0, 0.67);
     margin-top: 10vw;
@@ -70,3 +74,122 @@ p {
 }
 
 /**----------- Portfolio ---------------**/
+
+#portfolio {
+
+    justify-content: center;
+    padding: 5vw;
+}
+
+#portfolio .row1 {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: colum;
+    box-sizing: content-box;
+    padding-left: 9.89vw;
+    position: relative;
+    background-color: white;
+
+}
+
+#portfolio .row2 {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: colum;
+    box-sizing: content-box;
+    padding-left: 8.8vw;
+    position: relative;
+    background-color: white;
+
+}
+
+#portfolio .row3 {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: colum;
+    box-sizing: content-box;
+    padding-left: 9.89vw;
+    position: relative;
+    background-color: white;
+
+}
+
+#portfolio .row4 {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: colum;
+    box-sizing: content-box;
+    padding-left: 8.8vw;
+    position: relative;
+    background-color: white;
+
+}
+
+#portfolio .row5 {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: colum;
+    box-sizing: content-box;
+    padding-left: 9.89vw;
+    position: relative;
+    background-color: white;
+
+}
+
+#portfolio .row6 {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: colum;
+    box-sizing: content-box;
+    padding-left: 8.8vw;
+    position: relative;
+    background-color: white;
+
+}
+
+
+#portfolio .row7 {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: colum;
+    box-sizing: content-box;
+    padding-left: 9.89vw;
+    position: relative;
+    background-color: white;
+
+}
+
+
+
+/**--- Portfolio boks -----**/
+
+.boks {
+    display: flex;
+    text-align: center;
+    line-height: 3.4vw;
+    background-color: rgba(255, 0, 0, 0.5);
+
+    height: 350px;
+    width: 350px;
+
+}
+
+/*
+#boks1 {
+    height: 350px;
+    width: 350px;
+
+}
+
+#boks2 {
+    height: 350px;
+    width: 350px;
+
+}
+
+#boks3 {
+    height: 350px;
+    width: 350px;
+
+}
+*/
