--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
+p,
+img,
+div,
+h1 {
+    margin: 0;
+    padding: 0;
+}
+
 #om img {
     border-radius: 100%;
     width: 50%;
@@ -21,7 +29,13 @@ footer {
 }
 
 html {
-    background-color: white;
+    background-color: rgba(245, 245, 245, 0.77);
+}
+
+hr {
+    border: 0;
+    height: 0.5px;
+    background-color: rgb(226, 49, 49);
 }
 
 /*---------- Navigation -----------*/
@@ -35,11 +49,14 @@ nav {
     position: relative;
 }
 
-a {
+ul a {
     font-family: 'Raleway Dots', cursive;
     background-color: white;
-    padding: 0px 10px;
+    padding: 0px 30px;
     text-decoration: none;
+    letter-spacing: 0.8px;
+    text-transform: uppercase;
+    justify-content: space-between;
 }
 
 a:hover {
@@ -47,8 +64,9 @@ a:hover {
     color: #ffeb00;
 }
 
-.Shawna {
-    font-size: 1.4em;
+
+ul .menu {
+    float: right;
 }
 
 
@@ -64,7 +82,7 @@ p {
 
 /**----------- Ommig ---------------**/
 
-#om .bauhaus {
+#om {
     box-sizing: border-box;
     background-color: rgba(255, 226, 0, 0.67);
     margin-top: 10vw;
@@ -78,118 +96,50 @@ p {
 #portfolio {
 
     justify-content: center;
-    padding: 5vw;
+    padding: 0;
+    padding-top: 5vw;
 }
 
-#portfolio .row1 {
+
+
+#portfolio .row {
+    box-sizing: border-box;
+    margin: 0 auto;
+    padding: 0;
+    position: relative;
+    background-color: #ffffff;
+    flex-grow: 1;
+    flex-basis: 200px;
+    height: 100%;
     display: flex;
     flex-wrap: wrap;
-    flex-direction: colum;
-    box-sizing: content-box;
-    padding-left: 9.89vw;
-    position: relative;
-    background-color: white;
-
 }
 
-#portfolio .row2 {
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: colum;
-    box-sizing: content-box;
-    padding-left: 8.8vw;
-    position: relative;
-    background-color: white;
-
+h1 {
+    text-align: center;
+    padding-top: 5vw;
 }
-
-#portfolio .row3 {
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: colum;
-    box-sizing: content-box;
-    padding-left: 9.89vw;
-    position: relative;
-    background-color: white;
-
-}
-
-#portfolio .row4 {
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: colum;
-    box-sizing: content-box;
-    padding-left: 8.8vw;
-    position: relative;
-    background-color: white;
-
-}
-
-#portfolio .row5 {
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: colum;
-    box-sizing: content-box;
-    padding-left: 9.89vw;
-    position: relative;
-    background-color: white;
-
-}
-
-#portfolio .row6 {
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: colum;
-    box-sizing: content-box;
-    padding-left: 8.8vw;
-    position: relative;
-    background-color: white;
-
-}
-
-
-#portfolio .row7 {
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: colum;
-    box-sizing: content-box;
-    padding-left: 9.89vw;
-    position: relative;
-    background-color: white;
-
-}
-
 
 
 /**--- Portfolio boks -----**/
 
 .boks {
-    display: flex;
+    height: 350px;
+    width: 350px;
     text-align: center;
-    line-height: 3.4vw;
-    background-color: rgba(255, 0, 0, 0.5);
-
-    height: 350px;
-    width: 350px;
-
-}
-
-/*
-#boks1 {
-    height: 350px;
-    width: 350px;
+    z-index: 10;
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 
 }
 
-#boks2 {
-    height: 350px;
+.content {
     width: 350px;
-
+    height: 350px;
 }
 
-#boks3 {
-    height: 350px;
-    width: 350px;
-
+.tekst {
+    padding: 2vw;
 }
-*/
