--- a/style.css
+++ b/style.css
@@ -1,67 +1,92 @@
-p,
-img,
-div,
-h1 {
-    margin: 0;
-    padding: 0;
-}
-
 img {
     width: 100%;
 }
 
+/*------- burger menu -------------*/
 
-
-.bauhaus img {
-    width: 30%;
+.menubutton {
+    width: 2em;
+    height: 1.5em;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    justify-content: space-around;
+    position: relative;
+    z-index: 10;
 }
 
-p,
-h2,
-h3 {
+header * {
+    list-style-type: none;
+}
+
+.burger a {
+
     font-family: 'Raleway Dots', cursive;
+    background-color: white;
+    padding: 0px 30px;
+    text-decoration: none;
+    letter-spacing: 0.8px;
+    line-height: 7vw;
+    text-transform: uppercase;
+    color: black;
 }
 
-h1,
-h5 {
-    font-family: 'Raleway Dots', cursive;
-    color: rgb(226, 49, 49);
-}
 
-h1 {
-    padding-bottom: 10vw;
-}
-
-html {
-    background-color: rgba(245, 245, 245, 0.78);
-}
-
-hr {
-    border: 0;
-    height: 0.5px;
+.bar {
+    width: 1.8em;
+    height: 0.14em;
     background-color: rgb(226, 49, 49);
+    transition: transform .4s;
 }
 
 
-/*---------- Footer -----------*/
-
-footer {
-    text-align: center;
-    color: white;
-    background-color: #17191b;
-    padding: 15px;
-    margin-left: -3vw;
-    margin-right: -6vw;
-    font-family: 'Raleway Dots', cursive;
+.kryds .bar1 {
+    transform: rotate(45deg) translate(2px, 5px);
 }
 
-footer a {
-    color: white;
-    font-size: 1.6vw;
+.kryds .bar2 {
+    opacity: 0;
+}
+
+.kryds .bar3 {
+    transform: rotate(-45deg) translate(6px, -10px);
 }
 
 
-/*---------- Navigation -----------*/
+
+nav {
+    position: absolute;
+    width: 100%;
+    transform-origin: top;
+    transition: transform .5s;
+    transform: translateY(1);
+
+    z-index: 5;
+
+
+}
+
+.hidden {
+    transform: translateY(-200px);
+}
+
+header .burgermenu {
+    background-color: white;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    height: 0px;
+    padding-top: 1vw;
+    padding-bottom: 7vw;
+    padding-left: 2vw;
+    z-index: 21;
+    box-shadow: 0 0 7px 0 rgba(0, 0, 0, 0.13);
+}
+
+
+
+/*---------- desktop menu -----------*/
 
 nav {
 
@@ -71,9 +96,11 @@ nav {
     font-size: 1.2em;
     position: relative;
     overflow: hidden;
-    margin-left: -3vw;
-    margin-right: -6vw;
-    padding-bottom: 5vw;
+    box-shadow: 0 0 7px 0 rgba(0, 0, 0, 0.13);
+}
+
+.desktop header * {
+    display: inline;
 }
 
 ul a {
@@ -85,6 +112,7 @@ ul a {
     text-transform: uppercase;
     justify-content: space-between;
     color: black;
+
 }
 
 a:hover {
@@ -95,75 +123,204 @@ a:hover {
 
 ul .menu {
     float: right;
+    padding-right: 10vw;
 }
 
+.desktop {
+    visibility: hidden;
+    height: 0;
+}
+
+
+header .visible {
+    background-color: white;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    height: 0px;
+    padding-top: 2vw;
+    padding-bottom: 6vw;
+    z-index: 21;
+}
 
 
 /**----------- Media Q -------------**/
 
-@media screen and (max-width:816px) {
+@media screen and (min-width:600px) {
+    .desktop {
+        visibility: visible;
+        height: auto;
+    }
 
-    footer a {
-        color: white;
-        font-size: 2vw;
+    .burgermenu {
+        visibility: hidden;
+        height: 0;
+    }
+}
+
+
+@media screen and (min-width:600px) {
+    .overskrift h1 {
+        padding-top: 10vw;
     }
 }
 
 
 
+@media screen and (max-width:1030px) {
+    ul {
+        display: flex;
+        flex-direction: column;
+    }
 
-/**----------- Forside -------------**/
-
-.forside,
-p {
-    color: black
 }
 
-/**----------- Ommig ---------------**/
 
-#om {
-    flex-grow: 1;
-    background-color: white;
-    padding: 10px 30px 10px;
-    margin: -3vw;
+
+/*----- skrifttype, str. osv. ------*/
+
+a {
+    font-family: 'Raleway Dots', cursive;
+    font-size: 1.2em;
+    line-height: 20px;
+    color: grey;
+    text-decoration: none;
+}
+
+.facebook a {
+    font-size: 1.8em;
+
+}
+
+.facebook p {
+    word-spacing: 3vw;
+
+}
+
+
+h1 {
+    font-family: 'Raleway Dots', cursive;
+    font-size: 2.5em;
+    line-height: 45px;
+    color: #ea1717;
+    font-size: 2.8em;
+    text-align: center;
+
+}
+
+h2 {
+    font-family: 'Raleway Dots', cursive;
+    font-size: 1.4em;
+}
+
+h3 {
+    font-family: 'Raleway Dots', cursive;
+    font-size: 1.1em;
+    line-height: 25px;
+}
+
+
+
+h4 {
+    font-family: 'Raleway Dots', cursive;
+    font-size: 1em;
+    line-height: 25px;
+}
+
+
+p {
+    font-family: 'Raleway Dots', cursive;
+    font-size: 1em;
+    line-height: 22px;
+}
+
+
+hr {
+    border: 0;
+    height: 0.9px;
+    background-color: rgb(226, 49, 49);
+}
+
+
+
+
+/*---------- Forside --------------*/
+
+#forside .section {
+    padding: 0 15px 30px;
+    margin: 0 auto;
     max-width: 1200px;
     max-width: 900px;
     position: relative;
 }
 
+#forside .sectionwrapper {
+    height: 100%;
+    display: flex;
+    flex-wrap: wrap;
 
-#om h2 {
-    font-size: 4.5vw;
+}
+
+
+#forside .column {
+
+    flex-grow: 1;
+    flex-basis: 200px;
+    padding: 0 7px 1px;
+}
+
+
+
+
+/*---------- om mig --------------*/
+
+#om .section {
+    padding: 0 15px 30px;
+    margin: 0 auto;
+    max-width: 700px;
+    max-width: 300px;
+    position: relative;
+}
+
+#om .sectionwrapper {
+    height: 100%;
+    display: flex;
+    flex-wrap: wrap;
+
+}
+
+
+#om .column {
+
+    flex-grow: 1;
+    flex-basis: 200px;
+    padding: 0 7px 1px;
+
 }
 
 #om img {
-    border-radius: 100%;
-    width: 30%;
-    justify-content: center;
+    /*    border-radius: 100%;*/
+    max-width: 100%;
 
 }
 
 
-#om a {
-    font-size: 3.5vw;
-    line-height: 3vw;
-    color: black;
-    font-family: 'Raleway Dots', cursive;
-    text-decoration: none;
-    padding: 2vw;
+#om h1 {
+
+
+    padding-top: 10vw;
+
 }
 
-#om i {
-    font-size: 3.3vw;
-    line-height: 5vw;
-}
+
 
 
 /**----------- Portfolio ---------------**/
 
 #portfolio {
-    padding: 0;
-    padding-top: 5vw;
+
+    padding-top: 8vw;
     padding-bottom: 5vw;
 }
 
@@ -181,14 +338,18 @@ p {
 
 h1 {
     text-align: center;
-    padding-top: 10vw;
-    padding-bottom: 5vw;
 }
 
+.overskrift h1 {
+
+
+    padding-top: 10vw;
+
+}
 
 /**--- Portfolio boks -----**/
 
-.boks {
+#portfolio .boks {
     height: 400px;
     width: 400px;
     text-align: center;
@@ -197,16 +358,24 @@ h1 {
     flex-direction: column;
     justify-content: center;
 
-
 }
 
-.content {
+#portfolio .content {
     width: 400px;
     height: 400px;
+
 }
 
-.tekst {
-    padding: 2vw;
+#portfolio .tekst {
+    margin: 5vw;
+}
+
+#portfolio .tekst h1 {
+    font-size: 1.6em;
+}
+
+.tekst h1 {
+    color: black;
 }
 
 
@@ -223,58 +392,280 @@ h1 {
 .pic:hover {
     opacity: 0.6;
     filter: alpha(opacity=30);
+    color: aqua;
 }
 
 
-/**----------- everydayproject ---------------**/
 
-#everyday {
+/*---------- Stilartsite --------------*/
 
-    flex-grow: 1;
-    background-color: white;
-    padding: 10px 30px 10px;
-    margin-top: 5vw;
-    margin-bottom: 5vw;
-    max-width: 1200px;
-    max-width: 900px;
-    position: relative;
-
-}
-
-/**----------- Stilartsite ---------------**/
-
-#stilart {
-    flex-grow: 1;
-    background-color: white;
-    padding: 10px 30px 10px;
-    margin-top: 5vw;
-    margin-bottom: 5vw;
+#stilartsite .section {
+    padding: 0 15px 30px;
+    margin: 0 auto;
     max-width: 1200px;
     max-width: 900px;
     position: relative;
 }
 
-#stilart a {
-    color: red;
-    text-decoration: none;
-    font-size: 1.2em;
-    letter-spacing: 0.8px;
-}
+#stilartsite .sectionwrapper {
+    height: 100%;
+    display: flex;
+    flex-wrap: wrap;
 
-#stilart a:hover {
-    text-decoration: overline;
 }
 
 
-/**----------- Stilartsite ---------------**/
+#stilartsite .column {
 
-#redesign {
     flex-grow: 1;
-    background-color: white;
-    padding: 10px 30px 10px;
-    margin-top: 5vw;
-    margin-bottom: 5vw;
+    flex-basis: 200px;
+    padding: 0 7px 1px;
+}
+
+#stilartsite h1 {
+
+    flex-basis: 200px;
+    padding-top: 10vw;
+
+}
+
+
+
+/*---------- everyday project --------------*/
+
+#everydayproject .section {
+    padding: 0 15px 30px;
+    margin: 0 auto;
     max-width: 1200px;
     max-width: 900px;
     position: relative;
+}
+
+#everydayproject .sectionwrapper {
+    height: 100%;
+    display: flex;
+    flex-wrap: wrap;
+
+}
+
+
+#everydayproject .column {
+
+    flex-grow: 1;
+    flex-basis: 200px;
+    padding: 0 7px 1px;
+}
+
+#everydayproject h1 {
+
+
+    flex-basis: 200px;
+    padding-top: 10vw;
+
+}
+
+.responsive {
+    height: 0;
+    position: relative;
+    padding-bottom: 56.25%;
+    /*     16:9 Aspect Ratio */
+}
+
+.responsive iframe {
+    position: absolute;
+    width: 100% !important;
+    height: 100% !important;
+    top: 0;
+    left: 0;
+}
+
+/*---------- Redesign --------------*/
+
+#redesign .section {
+    padding: 0 15px 30px;
+    margin: 0 auto;
+    max-width: 1200px;
+    max-width: 900px;
+    position: relative;
+}
+
+#redesign .sectionwrapper {
+    height: 100%;
+    display: flex;
+    flex-wrap: wrap;
+
+}
+
+
+#redesign .column {
+
+    flex-grow: 1;
+    flex-basis: 200px;
+    padding: 0 7px 1px;
+}
+
+
+#redesign h1 {
+
+    flex-basis: 200px;
+    padding-top: 10vw;
+
+}
+
+/*---------- Animation --------------*/
+
+#animation .section {
+    padding: 0 15px 30px;
+    margin: 0 auto;
+    max-width: 1200px;
+    max-width: 900px;
+    position: relative;
+}
+
+#animation .sectionwrapper {
+    height: 100%;
+    display: flex;
+    flex-wrap: wrap;
+
+}
+
+
+#animation .column {
+
+    flex-grow: 1;
+    flex-basis: 200px;
+    padding: 0 7px 1px;
+}
+
+#animation h1 {
+
+    flex-basis: 200px;
+    padding-top: 10vw;
+
+}
+
+/*---------- Sexog Samfund --------------*/
+
+#sexogsamfund .section {
+    padding: 0 15px 30px;
+    margin: 0 auto;
+    max-width: 1200px;
+    max-width: 900px;
+    position: relative;
+}
+
+#sexogsamfund .sectionwrapper {
+    height: 100%;
+    display: flex;
+    flex-wrap: wrap;
+
+}
+
+
+#sexogsamfund .column {
+
+    flex-grow: 1;
+    flex-basis: 200px;
+    padding: 0 7px 1px;
+}
+
+#sexogsamfund h1 {
+
+    flex-basis: 200px;
+    padding-top: 10vw;
+
+}
+
+/*---------- KEAapp --------------*/
+
+#keaapp .section {
+    padding: 0 15px 30px;
+    margin: 0 auto;
+    max-width: 1200px;
+    max-width: 900px;
+    position: relative;
+}
+
+#keaapp .sectionwrapper {
+    height: 100%;
+    display: flex;
+    flex-wrap: wrap;
+
+}
+
+
+#keaapp .column {
+
+    flex-grow: 1;
+    flex-basis: 200px;
+    padding: 0 7px 1px;
+}
+
+#keaapp h1 {
+
+    flex-basis: 200px;
+    padding-top: 10vw;
+
+}
+
+
+
+/*---------- Joe & The Juice app --------------*/
+
+#joeapp .section {
+    padding: 0 15px 30px;
+    margin: 0 auto;
+    max-width: 1200px;
+    max-width: 900px;
+    position: relative;
+}
+
+#joeapp .sectionwrapper {
+    height: 100%;
+    display: flex;
+    flex-wrap: wrap;
+
+}
+
+
+#joeapp .column {
+
+    flex-grow: 1;
+    flex-basis: 200px;
+    padding: 0 7px 1px;
+}
+
+#joeapp h1 {
+
+    flex-basis: 200px;
+    padding-top: 10vw;
+
+}
+
+
+
+
+
+
+/*--------- andet ---------*/
+
+body {
+    background-color: rgba(245, 245, 245, 0.78);
+}
+
+
+section {
+    border-radius: 10px;
+}
+
+/*---------- Footer -----------*/
+
+footer {
+    text-align: center;
+    color: white;
+    background-color: rgba(23, 25, 27, 0.89);
+    padding: 15px;
+
+
+    font-family: 'Raleway Dots', cursive;
 }
