--- a/style.css
+++ b/style.css
@@ -73,7 +73,7 @@ nav {
 header .burgermenu {
     background-color: white;
     position: fixed;
-    top: 0;
+    top: 1vw;
     left: 0;
     right: 0;
     height: 0px;
@@ -135,7 +135,7 @@ ul .menu {
 header .visible {
     background-color: white;
     position: fixed;
-    top: 0;
+    top: 1vw;
     left: 0;
     right: 0;
     height: 0px;
@@ -247,28 +247,10 @@ hr {
 
 /*---------- Forside --------------*/
 
-#forside .section {
-    padding: 0 15px 30px;
-    margin: 0 auto;
-    max-width: 1200px;
-    max-width: 900px;
-    position: relative;
+#forside {
+    padding-top: 10vw;
 }
 
-#forside .sectionwrapper {
-    height: 100%;
-    display: flex;
-    flex-wrap: wrap;
-
-}
-
-
-#forside .column {
-
-    flex-grow: 1;
-    flex-basis: 200px;
-    padding: 0 7px 1px;
-}
 
 
 
@@ -665,7 +647,5 @@ footer {
     color: white;
     background-color: rgba(23, 25, 27, 0.89);
     padding: 15px;
-
-
     font-family: 'Raleway Dots', cursive;
 }
